name:          blog
version:       3.0.0
synopsis:      Static site generator for my personal blog
homepage:      https://ruudvanasseldonk.com
author:        Ruud van Asseldonk <dev@veniogames.com>
copyright:     Ruud van Asseldonk 2015
license:       GPL-3
license-file:  licence
build-type:    Simple
cabal-version: >= 1.10

executable blog
  main-is:          Main.hs
  other-modules:    Html, Minification, Post, Template, Type
  default-language: Haskell2010
  ghc-options:      -Wall -fwarn-tabs

  build-depends: base       >= 4.8    && < 4.9
               , containers >= 0.5    && < 0.6
               , directory  >= 1.2    && < 1.3
               , filepath   >= 1.4    && < 1.5
               , pandoc     >= 1.15   && < 1.16
               , process    >= 1.2.3  && < 1.5
               , tagsoup    >= 0.13.4 && < 0.14
               , text       >= 1.2    && < 1.3
               , time       >= 1.5    && < 1.6
