name:          blog
version:       3.0.0
synopsis:      Static site generator for my personal blog
homepage:      https://ruudvanasseldonk.com
author:        Ruud van Asseldonk <dev@veniogames.com>
copyright:     Ruud van Asseldonk 2015
license:       GPL-3
license-file:  license
build-type:    Simple
cabal-version: >= 1.10

executable blog
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Html, Image, Minification, Post, Template, Type
  default-language: Haskell2010
  -- For the run time options, use 4 threads (-N4), and use a heap of 256 MiB
  -- (-H). These settings were found to be optimal by running ghc-gc-tune.
  ghc-options:      -Wall -fwarn-tabs -O3 -threaded -rtsopts "-with-rtsopts=-N4 -A8388608 -H268435456"

  build-depends: async       >= 2.1  && < 2.2
               , base        >= 4.8  && < 4.10
               , containers  >= 0.5  && < 0.6
               , directory   >= 1.3  && < 1.4
               , filepath    >= 1.4  && < 1.5
               , hashable    >= 1.2  && < 1.3
               , JuicyPixels >= 3.2  && < 3.3
               , pandoc      >= 1.19 && < 1.20
               , process     >= 1.4  && < 1.5
               , tagsoup     >= 0.14 && < 0.15
               , text        >= 1.2  && < 1.3
               , time        >= 1.5  && < 1.7
