name:                site
version:             2.1.0
synopsis:            My personal Hakyll site
homepage:            https://ruudvanasseldonk.com
license:             GPL
license-file:        licence
author:              Ruud van Asseldonk
maintainer:          dev@veniogames.com
copyright:           Ruud van Asseldonk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ruud-v-a/ruudvanasseldonk.com.git

executable site
  main-is:             Site.hs
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -threaded
  default-language:    Haskell2010

  build-depends: base       >= 4.7      && < 4.9
               , hakyll     >= 4.7.0.0  && < 4.8
               , pandoc     >= 1.14.0.4 && < 1.15
               , old-locale >= 1.0.0.5  && < 1.1
               , time       >= 1.5.0.0  && < 1.6
               , containers >= 0.5.0.0  && < 0.6
               , filepath   >= 1.3.0.1  && < 1.4
